--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,26 @@
 cmake_minimum_required(VERSION 3.30)
 project(hpx_async_downloader)
+find_package(Boost REQUIRED)
+find_package(HPX REQUIRED)
+FIND_PACKAGE(CURL REQUIRED)
+include_directories(include)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(hpx_async_downloader main.cpp)
+add_executable(hpx_async_downloader src/main.cpp
+        include/downloader.hpp
+        src/downloader.cpp)
+
+target_link_libraries(hpx_async_downloader
+        HPX::hpx
+        HPX::wrap_main
+        HPX::iostreams_component
+#        Boost::system
+#        Boost::thread
+#        Boost::regex
+        CURL::libcurl
+        pthread
+        /opt/homebrew/opt/hwloc/lib/libhwloc.15.dylib
+        "-framework CoreFoundation"
+        "-framework IOKit"
+)
