--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,11 @@ include_directories(include)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(hpx_async_downloader main.cpp
-        include/core/scheduler.hpp
-        include/core/dispatcher.hpp
         include/input/url_reader.hpp
         include/io/downloader.hpp
         include/utils/http.hpp
         include/core/shared_queue.hpp
-        src/core/url_reader.cpp
+        src/input/url_reader.cpp
         src/utils/http.cpp
         src/io/downloader.cpp
         include/utils/file_handling.hpp
